--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,10 +9,10 @@
     {% endif %}
 </head>
 <body>
-    <div class="navbar">
+    <div class="navbar", style="background-color: red,">
         <a href="{{ url_for('home') }}">Home</a>
         <a href="{{ url_for('about') }}">About</a>
-        <a href="{{ url_for('add') }}">Add</a>
+        <a href="{{ url_for('add') }}">Add New</a>
     </div>
     {% block body_content %}{% endblock %}
 </body>
