--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     {% if title %}
         <title>{{ title }}</title>
     {% else %}
-        <title>Unknown title</title>
+        <title>E-Liquid Tracker</title>
     {% endif %}
 </head>
 <body>
