homepage working more than before, about page working( still really needs need styling issue sorted). add new page still not working.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,12 +7,12 @@
         </p>
     </h1>
 
-    {% for post in eliquid %}
+    {% for post in eliquids %}
         <div>
-            <h3><b>Brand name: </b> {{ eliquid.brand }}</h3>
-            <p><b>Product name: </b> {{ eliquid.name }}</p>
-            <p><b>Description:</b> {{ eliquid.description }}</p>
-            <p><b>Flavours: </b>{{ eliquid.flavours }}</p>
+            <h3><b>Brand name: </b> {{ eliquids.brand }}</h3>
+            <p><b>Product name: </b> {{ eliquids.name }}</p>
+            <p><b>Description:</b> {{ eliquids.description }}</p>
+            <p><b>Flavours: </b>{{ eliquids.flavours }}</p>
         </div>
     {% endfor %}
 
