Home page tested working, Add new page tested working. About page styling issues still need sorted

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,7 +7,7 @@
         </p>
     </h1>
 
-    {% for post in eliquids %}
+    {% for eliquids in eliquids %}
         <div>
             <h3><b>Brand name: </b> {{ eliquids.brand }}</h3>
             <p><b>Product name: </b> {{ eliquids.name }}</p>
