Home page styling updated, about page styling issues updated, still needs work.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,7 +2,7 @@
 
 {% block body_content %}
     <h1 style="background-color: darkblue">
-        <p style="color: red">
+        <p style="color: darkred">
             <b>E-Liquid Tracker Homepage</b>
         </p>
     </h1>
