--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,8 +9,8 @@
     {% endif %}
 </head>
 <body>
-    <div class="navbar", style="background-color: red,">
-        <a href="{{ url_for('home') }}">Home</a>
+    <div class="navbar", style="background-color: red">
+        <a style="font-size: larger", href={{ url_for('home') }}>Home</a>
         <a href="{{ url_for('about') }}">About</a>
         <a href="{{ url_for('add') }}">Add New</a>
     </div>
