About page styling issues updated, might rework some more

--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
 </h1>
     <body style="background-color: #000099">
         <div style="background-color: darkred;">
-            <div style="color: darkblue">
+            <div style="color: lightcyan">
                 <p style="font-size: larger">
                     This individual project involved creating an application that would allow users to track e-liquids that they have tried or want to try.
                     <br>
