--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     <div class="navbar", style="background-color: red">
-        <a style="font-size: larger", href={{ url_for('home') }}>Home</a>
-        <a href="{{ url_for('about') }}">About</a>
-        <a href="{{ url_for('add') }}">Add New</a>
+        <a style="font-size: larger", href={{ url_for('home') }}>|Home|</a>
+        <a style="font-size: larger", href="{{ url_for('about') }}">|About|</a>
+        <a style="font-size: larger", href="{{ url_for('add') }}">|Add New|</a>
+        <a style="font-size: larger", href="{{ url_for('delete') }}">|Remove|</a>
     </div>
     {% block body_content %}{% endblock %}
 </body>
