--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,12 +8,14 @@
     </h1>
 
     {% for eliquids in eliquids %}
-        <div>
-            <h3><b>Brand name: </b> {{ eliquids.brand }}</h3>
-            <p><b>Product name: </b> {{ eliquids.name }}</p>
-            <p><b>Description:</b> {{ eliquids.description }}</p>
-            <p><b>Flavours: </b>{{ eliquids.flavours }}</p>
-        </div>
+        {% if current_user.user_id == eliquids.user_id %}
+            <div>
+                <h3><b>Brand name: </b> {{ eliquids.brand }}</h3>
+                <p><b>Product name: </b> {{ eliquids.name }}</p>
+                <p><b>Description:</b> {{ eliquids.description }}</p>
+                <p><b>Flavours: </b>{{ eliquids.flavours }}</p>
+            </div>
+        {% endif %}
     {% endfor %}
 
 {% endblock %}
