--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,16 +6,23 @@
             <b>E-Liquid Tracker Homepage</b>
         </p>
     </h1>
+    <h1> Welcome  </h1>
+<p>
+    This is a website for track what eliquids you have tried,
+    want to try and which ones you have liked or not liked.
+</p>
+    <h3>Coming up</h3>
+<p>
+    In the near future we are hoping to add the functionality
+    to suggest new eliquids to trey based on what favours you already like.
+    We also want to add the ability to enter how long your liquids
+    and coils last so you know when you will need to restock.
 
-    {% for eliquids in eliquids %}
-        {% if current_user.user_id == eliquids.user_id %}
-            <div>
-                <h3><b>Brand name: </b> {{ eliquids.brand }}</h3>
-                <p><b>Product name: </b> {{ eliquids.name }}</p>
-                <p><b>Description:</b> {{ eliquids.description }}</p>
-                <p><b>Flavours: </b>{{ eliquids.flavours }}</p>
-            </div>
-        {% endif %}
-    {% endfor %}
+</p>
+<p>
+    To get started just click the 'Register' link at the top of the page and sign up.
+</p>
+
+<h1>Happy Vaping!</h1>
 
 {% endblock %}
