--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,13 +12,14 @@
     <div class="navbar", style="background-color: red">
         <a style="font-size: larger", href={{ url_for('home') }}>|Home|</a>
         <a style="font-size: larger", href="{{ url_for('about') }}">|About|</a>
-        <a style="font-size: larger", href="{{ url_for('add') }}">|Add New|</a>
-        <a style="font-size: larger", href="{{ url_for('delete') }}">|Remove|</a>
         <a style="font-size: larger", href="{{ url_for('register') }}">|Register|</a>
         <a style="font-size: larger", href="{{ url_for('login') }}">|Login|</a>
         {% if current_user.is_authenticated %}
+            <a style="font-size: larger", href="{{ url_for('add') }}">|Add New|</a>
+            <a style="font-size: larger", href="{{ url_for('delete') }}">|Remove|</a>
             <a style="font-size: larger", href="{{ url_for('logout') }}">|Log Out|</a>
             <a style="font-size: larger", href="{{ url_for('account') }}">|Account|</a>
+            <a style="font-size: larger", href="{{ url_for('my') }}">|My E-Liquids|</a>
         {% endif %}
     </div>
     {% block body_content %}{% endblock %}
