Updated titles for tabs, added update function tested not working.

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,11 @@
+<title>About</title>
+
 {% extends "layout.html" %}
 
 {% block body_content %}
 <h1 style="border:2px solid darkred;">
         <p style="color: lightcyan">
-            A little bit about this project and the technologies that went in to making it
+                 A little bit about this project and the technologies that went in to making it
         </p>
 </h1>
     <body style="background-color: #000099">
