--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,8 +20,11 @@
             <a style="font-size: larger", href="{{ url_for('logout') }}">|Log Out|</a>
             <a style="font-size: larger", href="{{ url_for('account') }}">|Account|</a>
             <a style="font-size: larger", href="{{ url_for('my') }}">|My E-Liquids|</a>
+            <a style="font-size: larger", href="{{ url_for('update') }}">|Update|</a>
         {% endif %}
+    <br>
     </div>
+    <br>
     {% block body_content %}{% endblock %}
 </body>
 </html>
