Updated titles for tabs, added update function tested not working.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -19,7 +19,8 @@
     <h2>Coming up</h2>
 <p>
     In the near future we are hoping to add the functionality
-    to suggest new eliquids to trey based on what favours you already like.
+    to suggest new eliquids to try based on what favours you already like.
+    <br>
     We also want to add the ability to enter how long your liquids
     and coils last so you know when you will need to restock.
 
