--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,16 +10,20 @@
 </head>
 <body>
     <div class="navbar", style="background-color: red">
-        <a style="font-size: larger", href={{ url_for('home') }}>|Home|</a>
-        <a style="font-size: larger", href="{{ url_for('about') }}">|About|</a>
-        <a style="font-size: larger", href="{{ url_for('register') }}">|Register|</a>
-        <a style="font-size: larger", href="{{ url_for('login') }}">|Login|</a>
         {% if current_user.is_authenticated %}
+            <a style="font-size: larger", href={{ url_for('home') }}>|Home|</a>
+            <a style="font-size: larger", href="{{ url_for('about') }}">|About|</a>
             <a style="font-size: larger", href="{{ url_for('add') }}">|Add New|</a>
             <a style="font-size: larger", href="{{ url_for('delete') }}">|Remove|</a>
             <a style="font-size: larger", href="{{ url_for('logout') }}">|Log Out|</a>
             <a style="font-size: larger", href="{{ url_for('account') }}">|Account|</a>
             <a style="font-size: larger", href="{{ url_for('my') }}">|My E-Liquids|</a>
+        {% else %}
+            <a style="font-size: larger", href={{ url_for('home') }}>|Home|</a>
+            <a style="font-size: larger", href="{{ url_for('about') }}">|About|</a>
+            <a style="font-size: larger", href="{{ url_for('register') }}">|Register|</a>
+            <a style="font-size: larger", href="{{ url_for('login') }}">|Login|</a>
+
         {% endif %}
     <br>
     </div>
