--- a/templates/my.html
+++ b/templates/my.html
@@ -15,6 +15,7 @@
         <p><b>Product name: </b> {{ eliquids.name }}</p>
         <p><b>Description:</b> {{ eliquids.description }}</p>
         <p><b>Flavours: </b>{{ eliquids.flavours }}</p>
+        <p><b>ID No#: </b> {{ eliquids. }}</p>
         <a style="background-color: red" href="{{ url_for('update') }}">Update</a>
     </div>
 {% endfor %}
