--- a/templates/update.html
+++ b/templates/update.html
@@ -7,7 +7,7 @@
     <div class='form'>
         <form method='POST' action=''>
             {{ form.hidden_tag() }}
-                    <div class="form-group">
+            <div class="form-group">
                 {{ form.brand.label }}
                 {{ form.brand }}
                 {% if form.brand.errors %}
@@ -31,9 +31,33 @@
                 {% endif %}
             </div>
             <br>
-                <div class='form_group'>
-                    {{ form.submit }}
-                </div>
+                    <div class="form-group">
+                {{ form.description.label }}
+                {{ form.description }}
+                {% if form.description.errors %}
+                    <div class="error">
+                        {% for error in form.description.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>
+        <br>
+            <div class="form-group">
+                {{ form.flavours.label }}
+                {{ form.flavours }}
+                {% if form.flavours.errors %}
+                    <div class="error">
+                        {% for error in form.flavours.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>
+        <br>
+            <div class='form_group'>
+                {{ form.submit }}
+            </div>
         </form>
     </div>
 {% endblock %}
