--- a/templates/account.html
+++ b/templates/account.html
@@ -46,6 +46,11 @@
             <div class='form_group'>
                 {{ form.submit }}
             </div>
+            <div>
+                <form action="{{ url_for('account_delete') }}">
+                    <button type="submit">Delete your account</button>
+                </form>
+            </div>
         </form>
     </div>
 {% endblock %}
