--- a/templates/my.html
+++ b/templates/my.html
@@ -15,7 +15,7 @@
         <p><b>Product name: </b> {{ eliquids.name }}</p>
         <p><b>Description:</b> {{ eliquids.description }}</p>
         <p><b>Flavours: </b>{{ eliquids.flavours }}</p>
-{#        <a href="{{ url_for('update', up=eliquids.id) }}">Update</a>#}
+<!--        <a href="{{ url_for('update', up=eliquids.id) }}">Update</a>-->
         <a href="{{ url_for('remove', up=eliquids.id) }}">Delete</a>
     </div>
 {% endfor %}
