--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,7 +6,7 @@
             <b>E-Liquid Tracker Homepage</b>
         </p>
     </h1>
-    <h1> Welcome  </h1>
+    <h1> Hello  </h1>
 <p>
     This is a website for track what eliquids you have tried,
     want to try and which ones you have liked or not liked.
