updated home page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,6 +16,14 @@
     To get started just click the 'Register' link at the top of the page and sign up.
 </p>
 <br>
+    <h2>Looking to quit smoking</h2>
+    <p>
+        E-cigarettes, also known as vapes, are one of the more recent stop smoking aids to become available <br>
+        and they can help you quit smoking for good.<br>
+        E-cigarettes can help you manage your nicotine cravings
+
+    </p>
+
     <h2>Coming up</h2>
 <p>
     In the near future we are hoping to add the functionality
