--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -20,7 +20,11 @@
     <p>
         E-cigarettes, also known as vapes, are one of the more recent stop smoking aids to become available <br>
         and they can help you quit smoking for good.<br>
-        E-cigarettes can help you manage your nicotine cravings
+        E-cigarettes can help you manage your nicotine craving
+    <br>
+    Here are some hand links if you are looking to quit smoking
+    <br>
+    https://www.nhs.uk/oneyou/for-your-body/quit-smoking/using-e-cigarettes-vapes-to-quit-smoking/
 
     </p>
 
