updated home page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -24,7 +24,8 @@
     <br>
     Here are some hand links if you are looking to quit smoking
     <br>
-    https://www.nhs.uk/oneyou/for-your-body/quit-smoking/using-e-cigarettes-vapes-to-quit-smoking/
+        <br>
+            <a href="https://www.nhs.uk/oneyou/for-your-body/quit-smoking/using-e-cigarettes-vapes-to-quit-smoking"></a>
 
     </p>
 
