updated home page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -25,7 +25,7 @@
     Here are some hand links if you are looking to quit smoking
     <br>
         <br>
-            <a href="https://www.nhs.uk/oneyou/for-your-body/quit-smoking/using-e-cigarettes-vapes-to-quit-smoking"></a>
+            <a href="https://www.nhs.uk/oneyou/for-your-body/quit-smoking/using-e-cigarettes-vapes-to-quit-smoking">NHS</a>
 
     </p>
 
