updated home page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,10 +22,11 @@
         and they can help you quit smoking for good.<br>
         E-cigarettes can help you manage your nicotine craving
     <br>
-    Here are some hand links if you are looking to quit smoking
+    Here are some handy links if you are looking to quit smoking with a vape/e-cigarette
     <br>
         <br>
             <a href="https://www.nhs.uk/oneyou/for-your-body/quit-smoking/using-e-cigarettes-vapes-to-quit-smoking">NHS</a>
+            <a href="https://vaping360.com/best-beginner-e-cigs-vapes/us/">Vaping 360</a>
 
     </p>
 
