--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -27,6 +27,7 @@
         <br>
             <a href="https://www.nhs.uk/oneyou/for-your-body/quit-smoking/using-e-cigarettes-vapes-to-quit-smoking">NHS</a>
             <a href="https://vaping360.com/best-beginner-e-cigs-vapes/us/">Vaping 360</a>
+            <a href="https://vpz.co.uk/apps/help-center">VPZ Vaping FAQs</a>
 
     </p>
 
