--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -25,9 +25,11 @@
     Here are some handy links if you are looking to quit smoking with a vape/e-cigarette
     <br>
         <br>
-            <a href="https://www.nhs.uk/oneyou/for-your-body/quit-smoking/using-e-cigarettes-vapes-to-quit-smoking">NHS</a><br>
-            <a href="https://vaping360.com/best-beginner-e-cigs-vapes/us/">Vaping 360</a>
-            <a href="https://vpz.co.uk/apps/help-center">VPZ Vaping FAQs</a>
+            <a href="https://www.nhs.uk/oneyou/for-your-body/quit-smoking/using-e-cigarettes-vapes-to-quit-smoking"> NHS </a>
+        <br>
+            <a href="https://vaping360.com/best-beginner-e-cigs-vapes/us/"> Vaping 360 </a>
+        <br>
+            <a href="https://vpz.co.uk/apps/help-center"> VPZ Vaping FAQs </a>
 
     </p>
 
