--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
         <title>E-Liquid Tracker</title>
     {% endif %}
 </head>
-<body>
+<body style="background-color: #b4e2ff">
     <div class="navbar", style="background-color: red">
         {% if current_user.is_authenticated %}
             <a style="font-size: larger", href={{ url_for('home') }}>|Home|</a>
