--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,7 +8,7 @@
     </h1>
     <h1> Welcome  </h1>
 <p>
-    This is a website for track what eliquids you have tried,
+    This is a website for keeping track of what eliquids you have tried,
     want to try and which ones you have liked or not liked.
 </p>
 <br>
