--- a/templates/account.html
+++ b/templates/account.html
@@ -46,11 +46,9 @@
             <div class='form_group'>
                 {{ form.submit }}
             </div>
-            <div>
-                <form action="{{ url_for('account_delete') }}">
-                    <button type="submit">Delete your account</button>
-                </form>
-            </div>
+        </form>
+        <form action="{{ url_for('account_delete') }}">
+            <button onclick="return confirm('Are you sure')" type="submit">Delete your account</button>
         </form>
     </div>
 {% endblock %}
